Wed Aug 31 17:28:23 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* variable.c (rb_autoload): There was a chance to run GC (from
	  rb_str_new2()) before finishing autoload_data_i construction. It
	  caused SEGV at rb_gc_mark() at autoload_i_mark.

	* variable.c (rb_autoload_load): Move RB_GC_GUARD() to proper
	  position based on suggestion by CHIKANAGA Tomoyuki at
	  http://d.hatena.ne.jp/nagachika/20110826/ruby_trunk_changes_33070_33078

	* variable.c (autoload_defined_p): Fix incompatible autoload behavior
	  that causes Rails crash. Class deifnition instruction defined in
	  'defineclass' in insns.def always invokes rb_autoload_load for a
	  constant. It's invoked for every class definition regardless of
	  existence of autoload definition. rb_autoload_load checkes if a
	  constant is defined as autoloaded, but new thread-safe autoload
	  returned different value if the constant is under autoloading.

Wed Aug 31 17:20:56 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* Re-apply r33078, thread-safe autoload which is reverted at r33093.

Wed Aug 31 16:28:04 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_io_m17n.rb (TestIO_M17N#test_{default_mode_on_dosish,
	  default_mode_on_unix,text_mode,binary_mode}): tests for [Bug #5164].

Wed Aug 31 15:54:11 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/json: Merge json gem v1.5.4 (3dab4c5a6a97fac03dac).

Wed Aug 31 13:09:41 2011  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* numeric.c (flo_round): Avoid overflow by optimizing for trivial
	  cases [Bug #5227]

Wed Aug 31 00:50:01 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_select_with_thread): and my typo. we all must
	  be more careful.

Wed Aug 31 00:48:38 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* thread.c (rb_thread_select): critical typo in r33117.

Wed Aug 31 00:30:49 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/-ext-/old_thread_select/test_old_thread_select.rb