@@ -1,3 +1,8 @@
+Thu Sep  1 09:27:57 2011  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* variable.c (rb_autoloading_value) Fix the order of definitions.
+	  It is used by autoload_defined_p.
+
 Wed Aug 31 17:28:23 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>
 
 	* variable.c (rb_autoload): There was a chance to run GC (from
